gen/ListLangParser.py
# Generated from F:/_uni/4_course/YAPIS/ListLangParser.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class ListLangParser ( Parser ):

    grammarFileName = "ListLangParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "'&&'", "'||'", 
                     "'!'", "'&'", "'<'", "'>'", "'=='", "'<='", "'>='", 
                     "'!='", "'='", "'+'", "'-'", "'*'", "'/'", "'%'", "'.'", 
                     "','", "':'", "';'", "'('", "')'", "'{'", "'}'", "'['", 
                     "']'", "'func'", "'return'", "'if'", "'else'", "'switch'", 
                     "'case'", "'while'", "'for'", "'in'", "'default'", 
                     "'break'" ]

    symbolicNames = [ "<INVALID>", "INDENT", "DEDENT", "AND", "OR", "NOT", 
                      "AMP", "LESS_THAN", "GREATER_THAN", "EQUALS", "LT_EQ", 
                      "GT_EQ", "NOT_EQ", "ASSIGNMENT", "ADD", "MINUS", "MULT", 
                      "DIV", "MOD", "DOT", "COMMA", "COLON", "SEMI_COLON", 
                      "OPEN_PAREN", "CLOSE_PAREN", "OPEN_BRACE", "CLOSE_BRACE", 
                      "OPEN_BRACKET", "CLOSE_BRACKET", "FUNC", "RETURN", 
                      "IF", "ELSE", "SWITCH", "CASE", "WHILE", "FOR", "IN", 
                      "DEFAULT", "BREAK", "BOOLEAN", "FLOAT_NUMBER", "DECIMAL_INTEGER", 
                      "STRING", "NAME", "COMMENT", "NEWLINE", "WS" ]

    RULE_program = 0
    RULE_simple_stmt = 1
    RULE_assignment_stmt = 2
    RULE_target_list = 3
    RULE_expression_stmt = 4
    RULE_return_stmt = 5
    RULE_break_stmt = 6
    RULE_compound_statement = 7
    RULE_suite = 8
    RULE_statement = 9
    RULE_stmt_list = 10
    RULE_func_decl = 11
    RULE_parameter_list = 12
    RULE_param = 13
    RULE_if_statement = 14
    RULE_while_statement = 15
    RULE_for_statement = 16
    RULE_switch_statement = 17
    RULE_case_block = 18
    RULE_default_block = 19
    RULE_expression_list = 20
    RULE_expression = 21
    RULE_atom = 22
    RULE_arg_list = 23
    RULE_literal = 24

    ruleNames =  [ "program", "simple_stmt", "assignment_stmt", "target_list", 
                   "expression_stmt", "return_stmt", "break_stmt", "compound_statement", 
                   "suite", "statement", "stmt_list", "func_decl", "parameter_list", 
                   "param", "if_statement", "while_statement", "for_statement", 
                   "switch_statement", "case_block", "default_block", "expression_list", 
                   "expression", "atom", "arg_list", "literal" ]

    EOF = Token.EOF
    INDENT=1
    DEDENT=2
    AND=3
    OR=4
    NOT=5
    AMP=6
    LESS_THAN=7
    GREATER_THAN=8
    EQUALS=9
    LT_EQ=10
    GT_EQ=11
    NOT_EQ=12
    ASSIGNMENT=13
    ADD=14
    MINUS=15
    MULT=16
    DIV=17
    MOD=18
    DOT=19
    COMMA=20
    COLON=21
    SEMI_COLON=22
    OPEN_PAREN=23
    CLOSE_PAREN=24
    OPEN_BRACE=25
    CLOSE_BRACE=26
    OPEN_BRACKET=27
    CLOSE_BRACKET=28
    FUNC=29
    RETURN=30
    IF=31
    ELSE=32
    SWITCH=33
    CASE=34
    WHILE=35
    FOR=36
    IN=37
    DEFAULT=38
    BREAK=39
    BOOLEAN=40
    FLOAT_NUMBER=41
    DECIMAL_INTEGER=42
    STRING=43
    NAME=44
    COMMENT=45
    NEWLINE=46
    WS=47

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(ListLangParser.EOF, 0)

        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(ListLangParser.NEWLINE)
            else:
                return self.getToken(ListLangParser.NEWLINE, i)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ListLangParser.StatementContext)
            else:
                return self.getTypedRuleContext(ListLangParser.StatementContext,i)


        def getRuleIndex(self):
            return ListLangParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = ListLangParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 53
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,0,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 50
                    self.match(ListLangParser.NEWLINE) 
                self.state = 55
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,0,self._ctx)

            self.state = 65
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 105118930305056) != 0):
                self.state = 56
                self.statement()

                self.state = 60
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,1,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 57
                        self.match(ListLangParser.NEWLINE) 
                    self.state = 62
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,1,self._ctx)

                self.state = 67
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 68
            self.match(ListLangParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Simple_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression_stmt(self):
            return self.getTypedRuleContext(ListLangParser.Expression_stmtContext,0)


        def assignment_stmt(self):
            return self.getTypedRuleContext(ListLangParser.Assignment_stmtContext,0)


        def return_stmt(self):
            return self.getTypedRuleContext(ListLangParser.Return_stmtContext,0)


        def break_stmt(self):
            return self.getTypedRuleContext(ListLangParser.Break_stmtContext,0)


        def getRuleIndex(self):
            return ListLangParser.RULE_simple_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSimple_stmt" ):
                listener.enterSimple_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSimple_stmt" ):
                listener.exitSimple_stmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSimple_stmt" ):
                return visitor.visitSimple_stmt(self)
            else:
                return visitor.visitChildren(self)




    def simple_stmt(self):

        localctx = ListLangParser.Simple_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_simple_stmt)
        try:
            self.state = 74
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 70
                self.expression_stmt()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 71
                self.assignment_stmt()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 72
                self.return_stmt()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 73
                self.break_stmt()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Assignment_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def target_list(self):
            return self.getTypedRuleContext(ListLangParser.Target_listContext,0)


        def ASSIGNMENT(self):
            return self.getToken(ListLangParser.ASSIGNMENT, 0)

        def expression_list(self):
            return self.getTypedRuleContext(ListLangParser.Expression_listContext,0)


        def getRuleIndex(self):
            return ListLangParser.RULE_assignment_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignment_stmt" ):
                listener.enterAssignment_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignment_stmt" ):
                listener.exitAssignment_stmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignment_stmt" ):
                return visitor.visitAssignment_stmt(self)
            else:
                return visitor.visitChildren(self)




    def assignment_stmt(self):

        localctx = ListLangParser.Assignment_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_assignment_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 76
            self.target_list()
            self.state = 77
            self.match(ListLangParser.ASSIGNMENT)
            self.state = 78
            self.expression_list()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Target_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NAME(self, i:int=None):
            if i is None:
                return self.getTokens(ListLangParser.NAME)
            else:
                return self.getToken(ListLangParser.NAME, i)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(ListLangParser.COMMA)
            else:
                return self.getToken(ListLangParser.COMMA, i)

        def getRuleIndex(self):
            return ListLangParser.RULE_target_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTarget_list" ):
                listener.enterTarget_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTarget_list" ):
                listener.exitTarget_list(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTarget_list" ):
                return visitor.visitTarget_list(self)
            else:
                return visitor.visitChildren(self)




    def target_list(self):

        localctx = ListLangParser.Target_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_target_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 80
            self.match(ListLangParser.NAME)
            self.state = 85
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==20:
                self.state = 81
                self.match(ListLangParser.COMMA)
                self.state = 82
                self.match(ListLangParser.NAME)
                self.state = 87
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Expression_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(ListLangParser.ExpressionContext,0)


        def getRuleIndex(self):
            return ListLangParser.RULE_expression_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpression_stmt" ):
                listener.enterExpression_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpression_stmt" ):
                listener.exitExpression_stmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpression_stmt" ):
                return visitor.visitExpression_stmt(self)
            else:
                return visitor.visitChildren(self)




    def expression_stmt(self):

        localctx = ListLangParser.Expression_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_expression_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 88
            self.expression(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Return_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def RETURN(self):
            return self.getToken(ListLangParser.RETURN, 0)

        def expression_list(self):
            return self.getTypedRuleContext(ListLangParser.Expression_listContext,0)


        def getRuleIndex(self):
            return ListLangParser.RULE_return_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReturn_stmt" ):
                listener.enterReturn_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReturn_stmt" ):
                listener.exitReturn_stmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReturn_stmt" ):
                return visitor.visitReturn_stmt(self)
            else:
                return visitor.visitChildren(self)




    def return_stmt(self):

        localctx = ListLangParser.Return_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_return_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 90
            self.match(ListLangParser.RETURN)
            self.state = 91
            self.expression_list()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Break_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BREAK(self):
            return self.getToken(ListLangParser.BREAK, 0)

        def getRuleIndex(self):
            return ListLangParser.RULE_break_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBreak_stmt" ):
                listener.enterBreak_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBreak_stmt" ):
                listener.exitBreak_stmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBreak_stmt" ):
                return visitor.visitBreak_stmt(self)
            else:
                return visitor.visitChildren(self)




    def break_stmt(self):

        localctx = ListLangParser.Break_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_break_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 93
            self.match(ListLangParser.BREAK)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Compound_statementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def func_decl(self):
            return self.getTypedRuleContext(ListLangParser.Func_declContext,0)


        def if_statement(self):
            return self.getTypedRuleContext(ListLangParser.If_statementContext,0)


        def while_statement(self):
            return self.getTypedRuleContext(ListLangParser.While_statementContext,0)


        def for_statement(self):
            return self.getTypedRuleContext(ListLangParser.For_statementContext,0)


        def switch_statement(self):
            return self.getTypedRuleContext(ListLangParser.Switch_statementContext,0)


        def getRuleIndex(self):
            return ListLangParser.RULE_compound_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCompound_statement" ):
                listener.enterCompound_statement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCompound_statement" ):
                listener.exitCompound_statement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCompound_statement" ):
                return visitor.visitCompound_statement(self)
            else:
                return visitor.visitChildren(self)




    def compound_statement(self):

        localctx = ListLangParser.Compound_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_compound_statement)
        try:
            self.state = 100
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [29]:
                self.enterOuterAlt(localctx, 1)
                self.state = 95
                self.func_decl()
                pass
            elif token in [31]:
                self.enterOuterAlt(localctx, 2)
                self.state = 96
                self.if_statement()
                pass
            elif token in [35]:
                self.enterOuterAlt(localctx, 3)
                self.state = 97
                self.while_statement()
                pass
            elif token in [36]:
                self.enterOuterAlt(localctx, 4)
                self.state = 98
                self.for_statement()
                pass
            elif token in [33]:
                self.enterOuterAlt(localctx, 5)
                self.state = 99
                self.switch_statement()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SuiteContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ListLangParser.StatementContext)
            else:
                return self.getTypedRuleContext(ListLangParser.StatementContext,i)


        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(ListLangParser.NEWLINE)
            else:
                return self.getToken(ListLangParser.NEWLINE, i)

        def INDENT(self):
            return self.getToken(ListLangParser.INDENT, 0)

        def DEDENT(self):
            return self.getToken(ListLangParser.DEDENT, 0)

        def getRuleIndex(self):
            return ListLangParser.RULE_suite

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSuite" ):
                listener.enterSuite(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSuite" ):
                listener.exitSuite(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSuite" ):
                return visitor.visitSuite(self)
            else:
                return visitor.visitChildren(self)




    def suite(self):

        localctx = ListLangParser.SuiteContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_suite)
        self._la = 0 # Token type
        try:
            self.state = 118
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 102
                self.statement()
                self.state = 103
                self.match(ListLangParser.NEWLINE)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 106 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 105
                    self.match(ListLangParser.NEWLINE)
                    self.state = 108 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not (_la==46):
                        break

                self.state = 110
                self.match(ListLangParser.INDENT)
                self.state = 112 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 111
                    self.statement()
                    self.state = 114 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 105118930305056) != 0)):
                        break

                self.state = 116
                self.match(ListLangParser.DEDENT)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stmt_list(self):
            return self.getTypedRuleContext(ListLangParser.Stmt_listContext,0)


        def NEWLINE(self):
            return self.getToken(ListLangParser.NEWLINE, 0)

        def compound_statement(self):
            return self.getTypedRuleContext(ListLangParser.Compound_statementContext,0)


        def getRuleIndex(self):
            return ListLangParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = ListLangParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_statement)
        try:
            self.state = 125
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [5, 23, 27, 30, 39, 40, 41, 42, 43, 44]:
                self.enterOuterAlt(localctx, 1)
                self.state = 120
                self.stmt_list()
                self.state = 121
                self.match(ListLangParser.NEWLINE)
                pass
            elif token in [29, 31, 33, 35, 36]:
                self.enterOuterAlt(localctx, 2)
                self.state = 123
                self.compound_statement()
                pass
            elif token in [46]:
                self.enterOuterAlt(localctx, 3)
                self.state = 124
                self.match(ListLangParser.NEWLINE)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Stmt_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def simple_stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ListLangParser.Simple_stmtContext)
            else:
                return self.getTypedRuleContext(ListLangParser.Simple_stmtContext,i)


        def SEMI_COLON(self, i:int=None):
            if i is None:
                return self.getTokens(ListLangParser.SEMI_COLON)
            else:
                return self.getToken(ListLangParser.SEMI_COLON, i)

        def getRuleIndex(self):
            return ListLangParser.RULE_stmt_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStmt_list" ):
                listener.enterStmt_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStmt_list" ):
                listener.exitStmt_list(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStmt_list" ):
                return visitor.visitStmt_list(self)
            else:
                return visitor.visitChildren(self)




    def stmt_list(self):

        localctx = ListLangParser.Stmt_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_stmt_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 127
            self.simple_stmt()
            self.state = 132
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==22:
                self.state = 128
                self.match(ListLangParser.SEMI_COLON)
                self.state = 129
                self.simple_stmt()
                self.state = 134
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Func_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNC(self):
            return self.getToken(ListLangParser.FUNC, 0)

        def NAME(self):
            return self.getToken(ListLangParser.NAME, 0)

        def OPEN_PAREN(self):
            return self.getToken(ListLangParser.OPEN_PAREN, 0)

        def CLOSE_PAREN(self):
            return self.getToken(ListLangParser.CLOSE_PAREN, 0)

        def COLON(self):
            return self.getToken(ListLangParser.COLON, 0)

        def suite(self):
            return self.getTypedRuleContext(ListLangParser.SuiteContext,0)


        def parameter_list(self):
            return self.getTypedRuleContext(ListLangParser.Parameter_listContext,0)


        def getRuleIndex(self):
            return ListLangParser.RULE_func_decl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunc_decl" ):
                listener.enterFunc_decl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunc_decl" ):
                listener.exitFunc_decl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunc_decl" ):
                return visitor.visitFunc_decl(self)
            else:
                return visitor.visitChildren(self)




    def func_decl(self):

        localctx = ListLangParser.Func_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_func_decl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 135
            self.match(ListLangParser.FUNC)
            self.state = 136
            self.match(ListLangParser.NAME)
            self.state = 137
            self.match(ListLangParser.OPEN_PAREN)
            self.state = 139
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==6 or _la==44:
                self.state = 138
                self.parameter_list()


            self.state = 141
            self.match(ListLangParser.CLOSE_PAREN)
            self.state = 142
            self.match(ListLangParser.COLON)
            self.state = 143
            self.suite()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Parameter_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def param(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ListLangParser.ParamContext)
            else:
                return self.getTypedRuleContext(ListLangParser.ParamContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(ListLangParser.COMMA)
            else:
                return self.getToken(ListLangParser.COMMA, i)

        def getRuleIndex(self):
            return ListLangParser.RULE_parameter_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParameter_list" ):
                listener.enterParameter_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParameter_list" ):
                listener.exitParameter_list(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParameter_list" ):
                return visitor.visitParameter_list(self)
            else:
                return visitor.visitChildren(self)




    def parameter_list(self):

        localctx = ListLangParser.Parameter_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_parameter_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 145
            self.param()
            self.state = 150
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==20:
                self.state = 146
                self.match(ListLangParser.COMMA)
                self.state = 147
                self.param()
                self.state = 152
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NAME(self):
            return self.getToken(ListLangParser.NAME, 0)

        def AMP(self):
            return self.getToken(ListLangParser.AMP, 0)

        def getRuleIndex(self):
            return ListLangParser.RULE_param

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParam" ):
                listener.enterParam(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParam" ):
                listener.exitParam(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParam" ):
                return visitor.visitParam(self)
            else:
                return visitor.visitChildren(self)




    def param(self):

        localctx = ListLangParser.ParamContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_param)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 154
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==6:
                self.state = 153
                self.match(ListLangParser.AMP)


            self.state = 156
            self.match(ListLangParser.NAME)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

